--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 /bin/
-/ilbe-text-2014.09
-/ilbe-text-2014.10.04
+/ilbe*
+/todayhumor*
 /dic.CSV
-/result-test-todayhumor.txt
-/result-test.txt
-/result-todayhumor.txt
-/text.txt
-/result.txt
-/todayhumor-text-2014.09
-/todayhumor-text-2014.10.04
+/result*
+/*.txt
 /word-new21.txt
 /komoran_data/
